# cs344_hw

./: Problem
Problem Sets/Problem Set 2/: CMakeLists.txt.autosave
Problem Sets/Problem Set 3/: CMakeLists.txt
Problem Sets/Problem Set 3/include/: compare.h  utils.h
Problem Sets/Problem Set 3/src/: HW3.cu  compare.cpp  main.cpp  student_func.cu
Problem Sets/build-Problem Set 3-JetsonTx2-Debug/: CMakeCache.txt
